@@ -1,3 +1,7 @@
+2007-04-16  Steven Grimm  <sgrimm@facebook.com>
+
+	* Command tokenizer performance and cleanliness improvement.
+	  Patch contributed by Paolo Borelli <paolo.borelli@gmail.com>.
 
 2007-04-16  Paul Lindner  <lindner@inuus.com>
 
@@ -5,7 +9,6 @@
 
 	* Windows Patch integration -- part 1, warnings elimination.
 
-	
 2007-04-12  Paul Lindner  <lindner@mirth.inuus.com>
 
 	* Allow changes to the verbosity level of the server with a new
